--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,14 +2,14 @@
   text-align: center;
 }
 
-.App-logo {
+/* .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
-}
+} */
 
 .App-header {
-  background-color: #222;
-  height: 150px;
+  background-color: rgb(6, 161, 169);
+  height: 250px;
   padding: 20px;
   color: white;
 }
